--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -1,16 +1,16 @@
 .banner-principal-decorativo
   &-1
-    animation: float1 3.5s ease-in-out infinite alternate
+    //animation: float1 3.5s ease-in-out infinite alternate
     position: absolute
-    top: 35%
-    right: 82%
-    width: 40%
+    top: 5%
+    right: 12%
+    width: 70%
 
   &-2
     animation: float1 2.8s ease-in-out infinite alternate
     position: absolute
-    top: 58%
-    right: 10%
+    top: 50%
+    right: 5%
     width: 32%
 
 
